@@ -1,0 +1,18 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tryton>
+    <data depends="analytic_account">
+        <record model="ir.ui.view" id="analytic_account_rule_view_list">
+            <field name="model">analytic_account.rule</field>
+            <field name="inherit" ref="analytic_account.rule_view_list"/>
+            <field name="name">analytic_account_rule_list</field>
+        </record>
+
+        <record model="ir.ui.view" id="analytic_account_rule_view_form">
+            <field name="model">analytic_account.rule</field>
+            <field name="inherit" ref="analytic_account.rule_view_form"/>
+            <field name="name">analytic_account_rule_form</field>
+        </record>
+    </data>
+</tryton>
