@@ -5,8 +5,11 @@ depends:
     company
     ir
     product
+extras_depend:
+    analytic_account
 xml:
     product.xml
     configuration.xml
     account.xml
     message.xml
+    analytic_account.xml
